# RESTfull_API

./: .env  Cargo.toml  diesel.toml
files/: puissance.rs
migrations/2024-10-14-131007_create_post/: up.sql
src/: main.rs  model.rs  schema.rs
