[package]
name = "rest_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-rt = "2.10.0"
actix-web = "4.9.0"
awmp = "0.8.1"
diesel = { version = "2.2.4", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
validator = { version = "0.18.1", features = ["derive"] }

